--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid" id="main-container">
             <div class="row header-container">
                 <div class="col-md-5 col-sm-12">
-                    <img src="../images/logo.png">
+                    <img src="images/logo.png">
                 </div>
                 <div class="col-md-7">
                     <div class="row">
